// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div>
  <div
    class="sc-beySPh fOhtuL default"
  >
    <label
      aria-label="label"
      class="sc-dmyCSP eBqJxY"
      data-name="label"
    >
      <h3
        class="sc-eDLKkx dyNiMt"
        data-name="heading"
      />
      <input
        class="sc-guDLey fpCSGi"
        data-name="input"
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders on disabled 1`] = `
<div>
  <div
    class="sc-beySPh jyiaZj default"
    disabled=""
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP eBqJxY"
      data-name="label"
      disabled=""
    >
      <h3
        class="sc-eDLKkx dyNiMt"
        data-name="heading"
        disabled=""
      >
        Input
      </h3>
      <input
        class="sc-guDLey fpCSGi"
        data-name="input"
        disabled=""
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 1`] = `
<div>
  <div
    class="sc-beySPh fOhtuL mute"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP eBqJxY undefined-label"
      data-name="label"
      stile="mute"
    >
      <h3
        class="sc-eDLKkx gySIDl undefined-heading"
        data-name="heading"
        stile="mute"
      >
        Input
      </h3>
      <input
        class="sc-guDLey jofGtu undefined-input"
        data-name="input"
        stile="mute"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 2`] = `
<div>
  <div
    class="sc-beySPh fOhtuL default"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP enyBlq undefined-label"
      data-name="label"
      stile="default"
    >
      <h3
        class="sc-eDLKkx gVYdGR undefined-heading"
        data-name="heading"
        stile="default"
      >
        Input
      </h3>
      <input
        class="sc-guDLey fpCSGi undefined-input"
        data-name="input"
        stile="default"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with each stile 3`] = `
<div>
  <div
    class="sc-beySPh fOhtuL primary"
  >
    <label
      aria-label="Input-label"
      class="sc-dmyCSP enyBlq undefined-label"
      data-name="label"
      stile="primary"
    >
      <h3
        class="sc-eDLKkx gVYdGR undefined-heading"
        data-name="heading"
        stile="primary"
      >
        Input
      </h3>
      <input
        class="sc-guDLey fpCSGi undefined-input"
        data-name="input"
        stile="primary"
      />
    </label>
  </div>
</div>
`;

exports[`Input renders with error 1`] = `
<div>
  <div
    class="sc-beySPh fOhtuL default"
  >
    <label
      aria-label="label"
      class="sc-dmyCSP eBqJxY"
      data-name="label"
    >
      <h3
        class="sc-eDLKkx dyNiMt"
        data-name="heading"
      />
      <input
        class="sc-guDLey fpCSGi error"
        data-name="input"
        error="error"
        stile="default"
      />
    </label>
    <span
      class="sc-hLQSwg gpNhwr"
      data-name="error-message"
    >
      error
    </span>
  </div>
</div>
`;
